# gpt-pro-relay-cli

./: .gitignore  CLAUDE.md  DEBUG.md  README.md  pyproject.toml
docs/: SETUP.md
skills/gpt-pro-local/: SKILL.md
skills/pro-relay/: SKILL.md
spike/: 00_seed_login.py  01_auth_probe.py  02_paste_probe.py  03_send_roundtrip.py  README.md  _common.py  seed_profile.py  set_pro_effort.py  set_sol_model.py
src/gpt_pro/: cli.py
tests/: test_chip_read.py  test_goto_retry.py  test_prompt_cap.py  test_slots_held.py
