[project]
name = "gpt-pro"
version = "0.1.0"
description = "Drive a logged-in ChatGPT Pro browser session over SSH."
# Original author of the project and its design; this is a fork.
authors = [
    {name = "Chris Liu", email = "chrisliu298@gmail.com"},
    {name = "Orlando Ding", email = "xiandao.airs@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.46",
]

[project.scripts]
gpt-pro-relay = "gpt_pro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_pro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
